[package]
name = "eta-graph"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.test]
inherits = "release"
debug = true

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "dfs_bfs"
harness = false

[[bench]]
name = "general"
harness = false

[dependencies]
eta-algorithms = "1.3.3"