[package]
name = "eta-graph"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.test]
inherits = "release"
debug = true

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
petgraph = "0.6.5"

[[bench]]
name = "dfs_bfs"
harness = false

[[bench]]
name = "general"
harness = false

[[bench]]
path = "benches/dijkstra.rs"
name = "dijkstra"
harness = false

[[bench]]
path = "benches/vs_pet_dijkstra.rs"
name = "vs_pet_dijkstra"
harness = false

[[bench]]
name = "vs_pet_dfs_bfs"
harness = false

[dependencies]
eta-algorithms = "1.3.3"