[package]
name = "eta-graph"
version = "1.0.0"
edition = "2021"
authors = ["erik9631@gmail.com"]
description = "Low overhead graph library focused on performance"
license-file = "license.txt"
build = "build.rs"
readme = "README.MD"
repository = "https://github.com/erik9631/GraphLib/"

[profile.test]
inherits = "release"
debug = true

[dependencies]
eta-algorithms = "1.5.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
petgraph = "0.6.5"

[[bench]]
name = "dfs_bfs"
harness = false

[[bench]]
name = "general"
harness = false

[[bench]]
path = "benches/dijkstra.rs"
name = "dijkstra"
harness = false

[[bench]]
path = "benches/vs_pet_dijkstra.rs"
name = "vs_pet_dijkstra"
harness = false

[[bench]]
name = "vs_pet_dfs_bfs"
harness = false

